...
    }()

    var addButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.configuration = .filled()
        button.setTitle("Agregar", for: .normal)
        button.addTarget(self, action: #selector(add(_:)), for: .touchUpInside)
        return button
    }()

    var addWithRandomButton: UIButton = {
        let button = UIButton()
...
    var plateTextfield: UITextField = {
        let field = UITextField()
        field.translatesAutoresizingMaskIntoConstraints = false
        field.borderStyle = .roundedRect
        field.placeholder = "ABC123"
        field.keyboardType = .alphabet
        field.accessibilityIdentifier = "PlateTextField"
        return field
    }()
}

