...
    }()

    var finishButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.configuration = .filled()
        button.setTitle("Finalizar turno", for: .normal)
        button.addTarget(self, action: #selector(completionProcess(_:)), for: .touchUpInside)
        return button
    }()

    var cancelButton: UIButton = {
        let button = UIButton()
...
